@@ -356,6 +356,8 @@ module FeedTools
           "xhtml:body",
           "body",
           "encoded",
+          "p:payload",
+          "payload",
           "description",
           "tagline",
           "subtitle",
@@ -438,6 +440,8 @@ module FeedTools
           "fullitem",
           "xhtml:body",
           "body",
+          "p:payload",
+          "payload",
           "content:encoded",
           "encoded",
           "atom10:content",
